<resources>
    <string name="app_name">Sách Truyện Offline</string>
    <string name="title_activity_act_home">ActHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="menu_sach">Sách</string>
    <string name="menu_sach_tong_hop">Sách tổng hợp</string>
    <string name="sach_chagiauchangheo">- Cha giầu cha nghèo</string>
    <string name="sach_duongrabienlon">- Đường ra biển lớn</string>
    <string name="sach_nhungtrieuphuthamlang">- Những triệu phút thầm lặng</string>
    <string name="sach_nguoibanhangvidainhatthegioi">- Người bán hàng vĩ đại nhất thế giới</string>
    <string name="sach_22quyluatbatbientrongmaeketing">- 22 quy luật bất biến trong maketing</string>
    <string name="sach_72thuattancongtamly">- 72 thuật tấn công tâm lý</string>
    <string name="sach_bimattuduytrieuphu">- Bí mật tư duy triệu phú</string>
    <string name="sach_khacbiethaylachet">- Khác biệt hay là chết</string>
    <string name="sach_10loikhuyenkhoinghep">- 10 lời khuyên khởi nghiệp</string>
    <string name="sach_typhubangiay">- Tỷ phú bán giày</string>
    <string name="sach_tantinhbatkyai">- Tán tỉnh bất kỳ ai</string>
    <string name="sach_luatcuatrochotinhai">- Luật của trò chơi tình ái</string>
    <string name="sach_dieukydieucuatinhyeu">- Điều kỳ diệu của tình yêu</string>
    <string name="sach_biquyetungxutrongtinhyeu">- Bí quyết ứng xử trong tình yêu</string>
    <string name="sach_lamthenaodechinhphucdoiphuong">- Làm thế nào để chinh phục đối phương</string>
    <string name="sach_gaikhonkhongbaogiosoe">- Gái khôn không bao giờ sợ ế</string>
    <string name="sach_cafecungtony">- Cafe cùng Tony</string>
    <string name="sach_TrenDuongBang">- Trên đừng băng</string>
    <string name="sach_HaNoi36PhoPhuong">- Hà Nội 36 phố phường</string>
    <string name="sach_ChuyenCuaLinhTayNam">- Chuyện của lính Tây Nam</string>
    <string name="sach_TottoChanCoBeBenCuaSo">Totto-Chan cô bé bên của sổ</string>
    <string name="menu_SachKinhDoanh">Sách kinh doanh</string>
    <string name="menu_sachTinhyeu">Sách tình yêu</string>
    <string name="menu_sachHoiKy">Sách hồi ký</string>
    <string name="sach_BachKhoaCuocSong">- Bách khoa cuộc sống</string>
    <string name="sach_10VanCauHoiVisao">- Mười vạn câu hỏi vì sao</string>
    <string name="sach_BiAnNhanLoai">- Bí ẩn của nhân loại</string>
    <string name="sach_LichSuVanVat">- Lịch sử vạn vật</string>
    <string name="sach_theGioiNhuThayToi">- Thế giới như thấy tôi</string>
    <string name="menu_sachKhoaHoc">Sách khoa học</string>
    <string name="sach_TuoiTreDangGiaBaoNhieu">- Tuổi trẻ đáng giá bao nhiêu</string>
    <string name="sach_KyNangBuongBo">- Kỹ năng buông bỏ</string>
    <string name="sach_ViGiamDoc1Phut">- Vị giám đốc 1 phút</string>
    <string name="sach_choLaNhan">- Cho là nhận</string>
    <string name="sach_nguoigioikhongphilanguoilamtatca">- Người giỏi không phải là người làm tất cả</string>
    <string name="sach_banguoiThayViDai">- Ba người thầy vĩ đại</string>
    <string name="sach_DungDoiDenKhiTotNghiep">- Đừng đợi đến khi tốt nghiệp đại học</string>
    <string name="sach_KhongGiLaKhongThe">- Không gì là không thể</string>
    <string name="sach_KheoAnKHeoNoiSecoDuocThienHa">- Khéo ăn khéo nói sẽ có được thiên hạ</string>
    <string name="sach_DocViBatKyAi">- Đọc vị bất kỳ ai</string>
    <string name="sach_NhungBaiHocCuocSong">- Những bài học cuộc sống</string>
    <string name="sach_TraiNghiemVaKhatVong">- Trải nghiệm và khát vọng cuộc sống</string>
    <string name="sach_10CauNoiVanNang">- 10 câu nói vạn năng</string>
    <string name="sach_10QuyLuatCuocsong">- 10 quy luật cuộc sống</string>
    <string name="sach_doiThayDoiKhiChungTaThayDoi">- Đời thay đổi khi chúng ta thay đổi</string>
    <string name="sach_CuóngachNhoChoNhaLanhDao">- Cuốn sách nhỏ cho nhà lãnh đạo lớn</string>
    <string name="sach_SucManhTiemThuc">- Sức mạnh tiềm thức</string>
    <string name="sach_DanhThucConNguoiPhiThuongTrongBan">- Đánh thức con người phi thường trong bạn</string>
    <string name="sach_NoiNaoCoYChiNoiDoCoConDuong">- Nơi nào có ý chí, nơi đó có con đường</string>
    <string name="sach_QuangGanhLoDiVaViuSong">- Quảng gánh lo đi và vui sống</string>
    <string name="sach_DacNhanTam">- Đắc nhân tâm</string>


    <string name="menu_Truyen">Truyện</string>
    <string name="menu_TruyenTH">Truyện tổng hợp</string>
    <string name="Truyen_Bogia">- Bố già</string>
    <string name="Truyen_KhongGiaDinh">- Không gia đình</string>
    <string name="Truyen_TiengChimHotTrongBuimanGai">- Tiếng chim hót trong bị mần gia</string>
    <string name="Truyen_thepDatoiTheDay">- Thép đã tôi thế đấy</string>
    <string name="Truyen_NhaKimGia">- Nhà kim giả</string>
    <string name="Truyen_DoiGioHu">- Đồi gió hú</string>
    <string name="Truyen_RuoiTrau">- Ruồi trâu</string>
    <string name="Truyen_CuonTheoChieuGio">- Cuốn theo chiều gió</string>
    <string name="Truyen_TuThamThamLangQuen">- Từ thăm thẳm lãng quên</string>
    <string name="Truyen_TiengGoiNoiHoangGia">- Tiếng gọi nơi hoang giã</string>
    <string name="Truyen_NhaThoDucBaParis">- Nhà thờ Đức Bà Paris</string>
    <string name="Truyen_HoaTuyLipDen">- Hoa tulip đen</string>
    <string name="Truyen_ThienThanAcQuy">- Thiên thần và ác quỷ</string>
    <string name="Truyen_BieuTuongThatTruyen">- Biểu tượng thất truyền</string>
    <string name="Truyen_MatMaMaya">- Mật mã Maya</string>
    <string name="Truyen_BenRangTuyetson">- Bên rặng Tuyết sơn</string>
    <string name="Truyen_HoiheMienMan">- Hội hè miên man</string>
    <string name="Truyen_RừngNauy">- Rừng Nauy</string>
    <string name="Truyen_GietConChimNhan">- Giết con chim nhạn</string>
    <string name="Truyen_ThanhPhoTrom">- Thành phố trộm</string>
    <string name="menu_TruyenCuoi">Truyện cười</string>
    <string name="Truyen_TrangQuynh">- Trạng Quỳnh</string>
    <string name="Truyen_TruyenCuoiDanGianVN">- Truyện cười dân gian Việt Nam</string>
    <string name="Truyen_TruyenCuoiVoVa">- Truyện cười Vôva</string>
    <string name="Truyen_XienBot">- Truyện Xiển Bột</string>
    <string name="Truyen_TruyencuoiBanBaPhi">- Tiếng cười bác Ba Phi</string>
    <string name="Truyen_BaGiaiTuXuat">- Ba gia tú xuất</string>
    <string name="Truyen_TrangLon">- Truyện trạng lợn</string>
    <string name="Truyen_AnhHungXaDieu">- Anh hùng xạ điêu</string>
    <string name="Truyen_BichHuyetKiem">- Bích huyết kiếm</string>
    <string name="Truyen_YThienDoLongKy">- Ỷ thiên đồ long ký</string>
    <string name="Truyen_ThanDieuDaiHiep">- Thần điêu đại hiệp</string>
    <string name="menu_TruyenVN">Truyện Việt Nam</string>
    <string name="Truyen_DeMenPhieuLuuKY">- Dế mèn phiêu lưu ký</string>
    <string name="Truyen_DatRungPhuongNam">- Đất rừng phương nam</string>
    <string name="Truyen_ChiOiAnhYeuEm">- Chị ơi...Anh yêu em</string>
    <string name="Truyen_NhungNgayThoAu">- Những ngày thơ ấu</string>
    <string name="Truyen_ChoToiXinMotVeDiTuoiTho">- Cho tôi xin một vé đi tuổi thơ</string>
    <string name="Truyen_CoGaiDenTuHomQua">- Cô gái đến từ hôm qua</string>
    <string name="menu_TruyenKH">Truyện kiếm hiệp</string>
    <string name="name_ThongTin">Tên sách</string>
    <string name="TacGia_ThongTin">Tác giả</string>
    <string name="nxb_ThongTin">NXB</string>
    <string name="SoMuc_ThongTin">Số mục</string>
    <string name="Nguon_ThongTin">Nguồn</string>
    <string name="mucLuc">Mục lục</string>

</resources>
