<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ActInformation">

    <ImageView
        android:id="@+id/imgTTAvata"
        android:layout_width="81dp"
        android:layout_height="123dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiV30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiV50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guiV30"
        style="@style/tvThongTin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_ThongTin"/>
    <TextView
        android:id="@+id/tvNameTT"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guiV50"
        style="@style/lblThongTin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Đắc nhân tâm"/>


    <TextView
        app:layout_constraintTop_toBottomOf="@id/tvNameTT"
        app:layout_constraintStart_toEndOf="@+id/guiV30"
        style="@style/tvThongTin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TacGia_ThongTin"/>
    <TextView
        android:id="@+id/tvTacGiaTT"
        app:layout_constraintTop_toBottomOf="@id/tvNameTT"
        app:layout_constraintStart_toEndOf="@+id/guiV50"
        style="@style/lblThongTin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dale Carnegie"/>


    <TextView
        app:layout_constraintTop_toBottomOf="@id/tvTacGiaTT"
        app:layout_constraintStart_toEndOf="@+id/guiV30"
        style="@style/tvThongTin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nxb_ThongTin"/>
    <TextView
        android:id="@+id/tvNXBTT"
        app:layout_constraintTop_toBottomOf="@id/tvTacGiaTT"
        app:layout_constraintStart_toEndOf="@+id/guiV50"
        style="@style/lblThongTin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Văn Hóa Thông Tin"/>


    <TextView
        app:layout_constraintTop_toBottomOf="@id/tvNXBTT"
        app:layout_constraintStart_toEndOf="@+id/guiV30"
        style="@style/tvThongTin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SoMuc_ThongTin"/>
    <TextView
        android:id="@+id/tvSoMucTT"
        app:layout_constraintTop_toBottomOf="@id/tvNXBTT"
        app:layout_constraintStart_toEndOf="@+id/guiV50"
        style="@style/lblThongTin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="40"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/tvSoMucTT"
        app:layout_constraintStart_toEndOf="@+id/guiV30"
        style="@style/tvThongTin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nguon_ThongTin"/>
    <TextView
        android:id="@+id/tvNguonTT"
        app:layout_constraintTop_toBottomOf="@id/tvSoMucTT"
        app:layout_constraintStart_toEndOf="@+id/guiV50"
        style="@style/lblThongTin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sưu tầm"/>

<TextView
    android:id="@+id/tvMucLuc"
    android:textColor="@color/RedColor"
    android:gravity="center"
    android:textStyle="bold"
    android:layout_marginTop="10dp"
    android:textSize="20sp"
    android:text="@string/mucLuc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/tvNguonTT"/>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvMucLuc"
        android:id="@+id/ryMucLuc"/>
</androidx.constraintlayout.widget.ConstraintLayout>